--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,30 +3,26 @@
 
 .header {
     background-color: #0C356A;
-    border-bottom: solid #0C356A 4px;
-    box-shadow: 
-    inset -50px -50px 50px rgba(255, 255, 255, 0.2),
-    inset 50px 50px 50px rgba(0,0,0,0.1);
+    border-bottom: solid #279EFF 4px;
+    width: 100vw;
+    height: 3.975rem;
 }
 .Navegacao {
     display: flex;
-    padding-bottom: 20px;
-    gap: 40px;
-    width: 100vw;
-    height: 2.875rem;
-}
-.Navegacao a {
-    margin-left: 5%;
-    margin-top: 2%;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    color: #000;
-    text-decoration: none;
+    gap: 20px;
+    justify-content: left;
 }
 
-.Ellipse {
-    position: relative;
-    height: 3.655rem;
-    left: -20px;
-    top: -20px;
+.Navegacao h2 {
+    display: flex;
+    font-size: 1.1rem;
+    color: #fafafa;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    border-bottom: #279EFF solid 4px;
+    margin: 1.3rem;
+}
+
+.Navegacao h2:hover {
+    cursor: pointer;
 }
