--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -1,8 +1,7 @@
 
 .container-section {
     background-color: #352F44;
-    background: #352F44;
-     width: 100%;
+     width: 100vw;
      height: 50rem;
      box-shadow: 
      inset -50px -50px 50px rgba(255, 255, 255, 0.01),
