revisando criação de um componente

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -19,6 +19,10 @@ body::-webkit-scrollbar{
     width: 100%;
 }
 
+.Layout.dark {   
+    background-color: #000;
+}
+
 .LayoutTextos {
     display: flex;
     flex-flow: column wrap;
