--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,12 +1,13 @@
+
+:root {
+    --primary-color: #E04D01;
+    --secondary-color:  #FF7700;
+    --font-color: #fff;
+}
+
 * {
     margin: 0;
     padding: 0;
-}
-body {
-    background-color: #fff;
-    color: #000;
-    box-sizing: border-box;
-    margin: 0;
 }
 
 body::-webkit-scrollbar{
@@ -17,30 +18,87 @@ body::-webkit-scrollbar{
 .Layout {   
     height: 44rem; 
     width: 100%;
+    background-color: #fff;
+    color: #000;
+    box-sizing: border-box;
+    margin: 0;
+    transition: all 0.6s linear;
 }
+
+.Layout.dark {
+    height: 44rem; 
+    width: 100%;
+    background-color: #251D3A;
+    color: var(--font-color);
+    box-sizing: border-box;
+    margin: 0;
+    transition: all 0.6s linear;
+
+}
+
+.Layout.dark .LinksBotao a {
+    border: 3px solid var(--primary-color)
+;
+    display: flex;
+    width: 20.875rem;
+    height: 1.875rem;
+    color: var(--primary-color)
+;
+    border-radius: 22px;
+    align-items: center;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1rem;
+    gap: 6px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    justify-content: center;
+    transition: all 0.6s ease-in-out 60ms;
+}
+
+.Layout.dark .LinksBotao a:hover {
+    color: var(--primary-color);
+    background-color: transparent;
+    transform: scale(0.9)rotateX(360deg);
+    box-shadow: inset 0px 0px 4px;
+}
+
+.Layout.dark .LayoutTextos p {
+    border-left: var(--primary-color) solid;
+}
+
+.Layout.dark .LayoutTextos strong {
+    color: var(--primary-color);
+}
+
+/*  Layout dark acima */
+
 
 .LayoutTextos {
     display: flex;
     flex-flow: column wrap;
     gap: 26px;
-    margin: 4% 5%;
 }
 
 .LayoutTextos h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
+    margin-top: 4%;
+    margin-left: 5%;
 }
 
 .Layout span {
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 550;
+    margin-left: 4%;
 }
 
 .LayoutTextos p{
     border-left: #0C356A solid;
     padding-left: 10px;
     width: 50%;
+    margin-left: 3%;
 }
 
 .LayoutTextos strong {
@@ -79,6 +137,7 @@ body::-webkit-scrollbar{
     color: #0C356A;
     box-shadow: inset 0px 0px 15px;
     transition: all 0.6s ease-in-out 60ms;
+    margin-left: 5%;
 }
 
 .LinksBotao a img {
