--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap');
 :root {
     --primary-color: #E04D01;
     --secondary-color:  #FF7700;
@@ -82,7 +82,7 @@ body::-webkit-scrollbar{
 }
 
 .LayoutTextos h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Exo', sans-serif;
     font-size: 2rem;
     margin-top: 4%;
     margin-left: 5%;
@@ -136,7 +136,7 @@ body::-webkit-scrollbar{
     font-family: 'Montserrat', sans-serif;
     justify-content: center;
     color: #0C356A;
-    box-shadow: inset 0px 0px 15px;
+    box-shadow: inset 0px 0px 5px;
     transition: all 0.6s ease-in-out 60ms;
  
 }
@@ -150,7 +150,7 @@ body::-webkit-scrollbar{
     background-color: #2A2F4F;
     color: #279EFF;
     transform: scale(0.9)rotateX(360deg);
-    box-shadow: inset 0px 0px 4px;
+    box-shadow: inset 0px 0px 25px;
 
 }
 
