--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -38,23 +38,8 @@ body::-webkit-scrollbar{
 }
 
 .Layout.dark .LinksBotao a {
-    border: 3px solid var(--secondary-color)
-;
-    display: flex;
-    width: 20.875rem;
-    height: 1.875rem;
-    color: var(--secondary-color);
-;
-    border-radius: 22px;
-    align-items: center;
-    padding: 0.5rem;
-    text-decoration: none;
-    font-size: 1rem;
-    gap: 6px;
-    font-weight: bold;
-    font-family: 'Montserrat', sans-serif;
-    justify-content: center;
-    transition: all 0.6s ease-in-out 60ms;
+   border-color: var(--secondary-color);
+   color: var(--primary-color);
 }
 
 .Layout.dark .LinksBotao a:hover {
@@ -90,15 +75,16 @@ body::-webkit-scrollbar{
 
 .Layout span {
     font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 550;
+    font-family: 'Exo', sans-serif;
+    font-weight: 750;
     margin-left: 4%;
 }
 
 .LayoutTextos p{
     border-left: #0C356A solid;
+    max-width: 65%;
+    flex-wrap: wrap;
     padding-left: 10px;
-    width: 50%;
     margin-left: 3%;
 }
 
@@ -126,18 +112,18 @@ body::-webkit-scrollbar{
     width: 20.875rem;
     height: 1.875rem;
     border: 3.5px solid #0C356A;
-    border-radius: 20px;
+    border-radius: 40px;
     align-items: center;
     padding: 0.5rem;
     text-decoration: none;
     font-size: 1rem;
-    gap: 9px;
+    gap: 8px;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     justify-content: center;
     color: #0C356A;
     box-shadow: inset 0px 0px 5px;
-    transition: all 0.6s ease-in-out 60ms;
+    transition: all 0.6s ease-in-out 90ms;
  
 }
 
@@ -147,7 +133,7 @@ body::-webkit-scrollbar{
     color: var(--primary-color);
 }
 .LinksBotao a:hover {
-    background-color: #2A2F4F;
+    background-color: var(--dark2-color);
     color: #279EFF;
     transform: scale(0.9)rotateX(360deg);
     box-shadow: inset 0px 0px 25px;
@@ -158,7 +144,7 @@ body::-webkit-scrollbar{
 
 /* RESPONSIVIDADE */
 
-@media (max-width: 1040px) and (min-width: 350px){
+@media (max-width: 1040px) and (min-width: 451px){
 
 
     .LayoutTextos h1 {
@@ -170,10 +156,13 @@ body::-webkit-scrollbar{
     }
 
     .LayoutTextos p {
-        width: 100%;
-        border: none;
-        font-size: 16px;
         text-align: center;
+        max-width: 90%;
+        border: none;
+    }
+
+    .Layout.dark .LayoutTextos p {
+        border: none;
     }
 
     .LinksBotao {
