adicionando simbolos das techs a sessão de projetos

--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -8,7 +8,32 @@
      border-top: #279EFF solid 6px;
  }
 
- .container-section.dark {
+.container-section.dark {
     background-color: var(--dark2-color);
     border-color: var(--primary-color);
  }
+
+.container-techs {
+    display: flex;
+    height: 100%;
+    width: 20%;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.container-techs img {
+    margin-left: 10%;
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    opacity: 0.7;
+    transition: all 0.5s linear;
+}
+
+.container-techs img:hover {
+    opacity: 1.0;
+    scale: 1.4;
+    filter: contrast(1.5);
+    transition: all 0.5s linear;
+}
