--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -15,6 +15,10 @@
 body::-webkit-scrollbar{
     width: 0px;
 }
+
+
+
+
 /* LAYOUT PRINCIPAL */
 
 .Layout {   
@@ -24,36 +28,6 @@ body::-webkit-scrollbar{
     box-sizing: border-box;
     transition: all 0.6s linear;
 }
-
-.Layout.dark {
-    background-color: var(--dark2-color);
-    color: var(--font-color);
-
-
-}
-
-.Layout.dark .LinksBotao a {
-   border-color: var(--secondary-color);
-   color: var(--primary-color);
-}
-
-.Layout.dark .LinksBotao a:hover {
-    color: var(--dark-color);
-    background-color: var(--primary-color);
-    transform: scale(0.9)rotateX(360deg);
-    box-shadow: inset 0px 0px 15px;
-}
-
-.Layout.dark .LayoutTextos p {
-    border-left: var(--primary-color) solid;
-}
-
-.Layout.dark .LayoutTextos strong {
-    color: var(--primary-color);
-}
-
-/*  Layout dark acima */
-
 
 .LayoutTextos {
     display: flex;
@@ -93,7 +67,7 @@ body::-webkit-scrollbar{
 
 /* LAYOUT PRINCIPAL */
 
-/*     BOTÃO              */
+/*  BOTÃO  */
 
 .LinksBotao {
     display: flex;
@@ -138,6 +112,7 @@ body::-webkit-scrollbar{
 
 /*  BOTÃO  */
 
+
 /* RESPONSIVIDADE */
 
 @media (max-width: 1040px) and (min-width: 350px){
@@ -165,3 +140,40 @@ body::-webkit-scrollbar{
 
     }
 }
+
+/* RESPONSIVIDADE */
+
+
+/* DARK MODE  */
+    .Layout.dark {
+        background-color: var(--dark2-color);
+        color: var(--font-color);
+    
+    
+    }
+    
+    .Layout.dark .LinksBotao a {
+       border-color: var(--secondary-color);
+       color: var(--primary-color);
+    }
+    
+    .Layout.dark .LinksBotao a:hover {
+        color: var(--dark-color);
+        background-color: var(--primary-color);
+        transform: scale(0.9)rotateX(360deg);
+        box-shadow: inset 0px 0px 15px;
+    }
+    
+    .Layout.dark .LayoutTextos p {
+        border-left: var(--primary-color) solid;
+    }
+    
+    .Layout.dark .LayoutTextos strong {
+        color: var(--primary-color);
+    }
+    
+    .Layout.dark .LayoutTextos strong:hover {
+        color: var(--secondary-color);
+    }
+
+/* DARK MODE  */
