--- a/src/Components/ModoEscuro/ModoEscuro.css
+++ b/src/Components/ModoEscuro/ModoEscuro.css
@@ -1,10 +1,17 @@
 
+/* CHECKBOX INVISIVEL */
+
 .div-modoescuro input{
     display: none;
     position: absolute;
     width: 50px;
     opacity: 0;
 }
+
+/* CHECKBOX INVISIVEL */
+
+
+/*  CHECKBOX VISIVEL */
 
 .labelclasse{
     display: flex;
@@ -21,13 +28,9 @@
     align-items: center;
 }
 
-.labelclasse.dark {
-    background-color: var(--secondary-color);
-}
+/*  CHECKBOX VISIVEL */
 
-.labelclasse.dark .ball {
-    background-color: var(--font-color);
-}
+/*  BOLINHA DA CHECKBOX */
 
 .ball {
     background-color: #fff;
@@ -39,13 +42,23 @@
     transition: transform 0.6s linear;
 }
 
+/*  BOLINHA DA CHECKBOX */
+
+
+/* ATUALIZA POSIÇÃO DA BOLINHA */
+
 .inputclass:checked + label .ball {
     transform: translateX(24px);
 }
 
+/* ATUALIZA POSIÇÃO DA BOLINHA */
+
+
+/* RESPONSIVIDADE */
+
 @media (max-width: 660px) and (min-width: 350px) {
 
- .ball {
+    .ball {
     height: 12px;
     width: 12px;
  }
@@ -61,3 +74,16 @@
     transform: translateX(12px);
 }
 }
+
+/* RESPONSIVIDADE */
+
+
+/* DARK MODE */
+
+     .labelclasse.dark {
+         background-color: var(--secondary-color);
+     }
+     
+     .labelclasse.dark .ball {
+         background-color: var(--font-color);
+     }
