--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -2,12 +2,13 @@
 /* CONTAINER */
 
 .container-section {
+    display: flex;
     background-color: var(--dark2-color);
-     height: 50rem;
-     box-shadow: 
-     inset -50px -50px 50px rgba(255, 255, 255, 0.01),
-     inset 50px 50px 50px rgba(0,0,0,0.2);
-     border-top: #279EFF solid 6px;
+    height: 50rem;
+    box-shadow: 
+        inset -50px -50px 50px rgba(255, 255, 255, 0.01),
+        inset 50px 50px 50px rgba(0,0,0,0.2);
+    border-top: #279EFF solid 6px;
  }
 
 /* CONTAINER */
@@ -51,3 +52,56 @@
     background-color: var(--dark2-color);
     border-color: var(--primary-color);
  }
+
+.container-projects {
+    display: flex;
+    justify-content: space-around;
+    margin: 5% 0% 5%;
+    width: 60%;
+    gap: 18px;
+    flex-wrap: wrap;
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 
+    inset 50px 50px 50px rgba(255, 255, 255, 0.01),
+    inset -50px -50px 50px rgba(0,0,0,0.2);
+    width: 100%;
+    height: 130px;
+    max-width: 255px;
+    border: 4px solid #279EFF;
+    border-radius: 4%;
+    padding: 2%;
+    color: #fff;
+    transition: scale 0.8s;
+    gap: 8px;
+}
+
+.projects p {
+    font-size: 14px;
+}
+
+.container-projects div h1 {
+    text-align: center;
+    font-size: 18px;
+    border-bottom: #279EFF solid 4px;
+    font-family: 'Montserrat', sans-serif;
+    padding: 2%;
+}
+
+.container-img {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 6%;
+}
+
+.projects:hover {
+   scale: 1.2;
+}
+
+.img-link:hover {
+    transition: all 0.5s;
+    filter: brightness(2.5);
+}
