--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -15,6 +15,10 @@
 
 /* CONTAINER DAS IMAGENS DE TECNOLOGIAS */
 
+/* margin: 10% 0% 5% 0.845em; */
+
+
+
 .container-techs {
     display: flex;
     height: 100%;
