--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -3,12 +3,12 @@
 
 .container-section {
     display: flex;
-    background-color: var(--dark2-color);
+    background-color: var(--fonte-escura-bg);
     height: 50rem;
     box-shadow: 
         inset -50px -50px 50px rgba(255, 255, 255, 0.01),
         inset 50px 50px 50px rgba(0,0,0,0.2);
-    border-top: #279EFF solid 6px;
+    border-top: var(--fonte-primaria-clara) solid 6px;
  }
 
 /* CONTAINER */
@@ -53,8 +53,8 @@
 }
 /* DARK MODE */
 .container-section.dark {
-    background-color: var(--dark2-color);
-    border-color: var(--primary-color);
+    background-color: var(--fonte-escura-bg2);
+    border-color: var(--fonte-primaria-escura);
  }
 
 .container-projects {
@@ -75,7 +75,7 @@
     width: 100%;
     height: 130px;
     max-width: 255px;
-    border: 4px solid #279EFF;
+    border: 4px solid var(--fonte-primaria-clara);
     border-radius: 4%;
     padding: 2%;
     color: #fff;
@@ -84,7 +84,7 @@
 }
 
 .projects.dark {
-    border-color: var(--primary-color);
+    border-color: var(--fonte-primaria-escura);
 }
 
 .projects p {
