--- a/src/Components/SobreMim/SobreMim.css
+++ b/src/Components/SobreMim/SobreMim.css
@@ -8,8 +8,8 @@
     box-shadow: 
     inset -50px -50px 50px rgba(255, 255, 255, 0.01),
     inset 50px 50px 50px rgba(0,0,0,0.2);
-    background-color: #0C356A;
-    border-top: #279EFF 10px solid;
+    background-color: var(--fonte-secundaria-clara);
+    border-top: var(--fonte-primaria-clara) 10px solid;
     transition: all 1s;
     flex-wrap: wrap;
 }
@@ -20,7 +20,7 @@
 
 .SobreMim {
     display: flex;
-    color: #fff;
+    color: var(--font-color-cinza);
     padding: 0% 5% 0% 0%;
     flex-flow: column;
 }
@@ -30,7 +30,7 @@
 .SobreMim h1 {
     display: flex;
     justify-content: right;
-    border-bottom: #279EFF 7px solid;
+    border-bottom: var(--fonte-primaria-clara) 7px solid;
     margin: 10% 0% 5% 0.845em;
     font-size: 1.275rem;
     font-family: 'Exo', sans-serif;
@@ -67,7 +67,7 @@
 .sobre-img img{
     width: 20.355rem;
     border-radius: 45%;
-    border: #279EFF solid 4px;
+    border: var(--fonte-primaria-clara) solid 4px;
     animation: float 4s infinite;
     transition: all 0.9 ease-in-out 0s;
 }
@@ -91,7 +91,7 @@
 @media (max-width: 1040px) and (min-width: 350px) {
 
     .Secao2 {
-        border-top: 5px solid #279EFF;
+        border-top: 5px solid var(--fonte-primaria-clara);
     }
 
 
@@ -113,7 +113,7 @@
     .SobreMim h1 {
         font-size: 1.175rem;
         text-wrap: balance;
-        border-bottom: 4px solid #279EFF;
+        border-bottom: 4px solid var(--fonte-primaria-clara);
     }
 
     .sobre-img {
@@ -133,16 +133,16 @@
 /* DARK MODE */
 
         .Secao2.dark {
-            border-top: var(--secondary-color) 8px solid;
-            background-color: var(--dark-color);
+            border-top: var(--fonte-secundaria-escura) 8px solid;
+            background-color: var(--fonte-escura-bg);
         }
         
         .Secao2.dark .SobreMim h1 {
-            border-color: var(--primary-color);
-            color: var(--font-color);
+            border-color: var(--fonte-primaria-escura);
+            color: var(--font-color-cinza);
         }
         
         .Secao2.dark .sobre-img img {
-            border-color: var(--primary-color);
+            border-color: var(--fonte-primaria-escura);
            
         }
