--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --fonte-primaria-clara: #279EFF;
-  --fonte-secundaria-clara: #0C356A;
+  --fonte-primaria-clara: #8AAAE5;
+  --fonte-secundaria-clara: #365486;
   --fonte-primaria-escura: #E04D01;
   --fonte-secundaria-escura:  #FF7700;
   --font-color-cinza: #fafafa;
