--- a/src/Components/SobreMim/SobreMim.css
+++ b/src/Components/SobreMim/SobreMim.css
@@ -126,6 +126,7 @@
     .sobre-img img{
         margin-bottom: 10%;
         width: 15rem;
+        width: 18rem;
         border-radius: 0px;
         border-bottom: var(--fonte-primaria-clara) solid 15px;
         padding: 2px;
