--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -3,7 +3,7 @@
 
 .container-section {
     display: flex;
-    background-color: var(--fonte-escura-bg);
+    background-color: var(--fonte-escura-bg2);
     height: 50rem;
     box-shadow: 
         inset -50px -50px 50px rgba(255, 255, 255, 0.01),
@@ -21,8 +21,7 @@
 
 .container-techs {
     display: flex;
-    height: 100%;
-    width: 20%;
+    width: 10%;
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
@@ -34,7 +33,7 @@
 /* IMAGENS TECNOLOGIAS */
 
 .container-techs img {
-    margin-left: 10%;
+    margin-left: 2rem;
     width: 50px;
     height: 50px;
     align-items: center;
@@ -55,55 +54,13 @@
 .container-section.dark {
     background-color: var(--fonte-escura-bg2);
     border-color: var(--fonte-primaria-escura);
- }
+}
 
 .container-projects {
-    display: flex;
-    justify-content: space-around;
-    margin: 5% 0% 5%;
-    width: 60%;
-    gap: 18px;
-    flex-wrap: wrap;
-}
-
-.projects {
-    display: flex;
-    flex-direction: column;
-    box-shadow: 
-    inset 50px 50px 50px rgba(255, 255, 255, 0.01),
-    inset -50px -50px 50px rgba(0,0,0,0.2);
     width: 100%;
-    height: 130px;
-    max-width: 255px;
-    border: 4px solid var(--fonte-primaria-clara);
-    border-radius: 4%;
-    padding: 2%;
-    color: #fff;
-    transition: scale 0.8s;
-    gap: 8px;
-}
-
-.projects.dark {
-    border-color: var(--fonte-primaria-escura);
-}
-
-.projects p {
-    font-size: 14px;
-}
-
-
-
-.container-img {
+    margin-top: 5%;
+    margin-right: 5%;
     display: flex;
     justify-content: space-between;
-    margin-top: 6%;
-}
-
-.projects:hover {
-   scale: 1.2;
-}
-
-.img-link:hover {
-    transition: all 0.5s;
-    filter: brightness(2.5);
+    flex-wrap: wrap;
 }
