tentando arrumar erro de googletag

--- a/src/Components/ProjetoIndividual/ProjetoIndividual.css
+++ b/src/Components/ProjetoIndividual/ProjetoIndividual.css
@@ -40,7 +40,7 @@
 
 .mini-container {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     margin-top: 2%;
     gap: 8px;
     margin-left: 6%;
