--- a/src/Components/Projetos/Projetos.css
+++ b/src/Components/Projetos/Projetos.css
@@ -21,7 +21,6 @@
 
 .container-techs {
     display: flex;
-    width: 10%;
     flex-direction: column;
     justify-content: center;
     gap: 2rem;
@@ -34,8 +33,8 @@
 
 .container-techs img {
     margin-left: 2rem;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     align-items: center;
     opacity: 0.7;
     transition: all 0.5s linear;
@@ -58,9 +57,32 @@
 
 .container-projects {
     width: 100%;
-    margin-top: 5%;
-    margin-right: 5%;
+    margin: 5% 10%;
+    gap: 32px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
+}
+
+
+@media (max-width: 1040px) and (min-width: 350px) {
+
+    .container-section {
+        height: 70rem;
+    }
+
+    .container-projects {
+        flex-direction: column;
+        align-items: center;
+        gap: 80px
+    };
+
+    .container-techs img {
+        margin-left: 2rem;
+        width: 90px;
+        height: 30px;
+        align-items: center;
+        opacity: 0.7;
+        transition: all 0.5s linear;
+    }
 }
